# JumpingRobot

./: .gitignore  CMakeLists.txt  package.xml
blend/: left_foot.blend  left_foot.blend1  right_foot.blend  right_foot.blend1
calib/jumping_robot_ry/: calib_data.LeftFootForceSensor  calib_data.RightFootForceSensor
config/: joint_names_jumping_robot_ry.yaml
convex/jumping_robot_ry/: ankle_left-ch.txt  ankle_right-ch.txt  arm_left-ch.txt  arm_right-ch.txt  calf_left-ch.txt  calf_right-ch.txt  foot_left-ch.txt  foot_right-ch.txt  hip_left-ch.txt  hip_right-ch.txt  thigh_left-ch.txt  thigh_right-ch.txt  trunk-ch.txt
launch/: display.launch  gazebo.launch
meshes/: ankle_left.STL  ankle_right.STL  arm_left.STL  arm_right.STL  calf_left.STL  foot_left.STL  foot_right.STL  hip_left.STL  hip_right.STL  thigh_left.STL  thigh_right.STL
module/: alias.yaml  module.yaml
mujoco/: jumping_robot_ry (copy).xml  jumping_robot_ry.xml  jumping_robot_ry.yaml  jumping_robot_ry_ddd.xml
rsdf/jumping_robot_ry/: foot_left.rsdf  foot_right.rsdf
urdf/: jumping_robot_ry.csv  jumping_robot_ry.urdf  jumping_robot_ry_2_11.urdf  jumping_robot_ry_fake.urdf  jumping_robot_ry_real.urdf
