<package format="2">
  <name>jumping_robot_ry</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for jumping_robot_ry</p>
  </description>
  <author>TODO</author>
  <maintainer email="zhenyuanfu18@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>